# PicoFreeRTOS

./: .gitignore  README.md  guide.md
App-Template/: CMakeLists.txt
App-Template/bt_config/: btstack_config.h  led_control.gatt
App-Template/freertos_config/: FreeRTOSConfig.h  FreeRTOSConfig_old.h
App-Template/lwip_config/: lwipopts.h
App-Template/src/: FreeRTOS_strerror.c  FreeRTOS_strerror.h  advertising.h  ble_server.c  ble_server.h  freertos_callbacks.c  gap_config.h  main.c  my_debug.c  my_debug.h  pico_error_str.c  pico_error_str.h  service_implementation.c  service_implementation.h
deprecated/: crash_flag.c  crash_flag.h
